--- a/package.json
+++ b/package.json
@@ -13,7 +13,12 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "1.2.7",
+    "@fortawesome/free-brands-svg-icons": "5.4.2",
+    "@fortawesome/free-solid-svg-icons": "5.4.2",
+    "@fortawesome/vue-fontawesome": "0.1.1",
     "vue": "^2.5.2",
+    "vue-cli": "2.9.6",
     "vue-loader": "15.4.1",
     "vue-router": "3.0.1",
     "vuetify": "1.2.3",
@@ -62,8 +67,8 @@
     "uglifyjs-webpack-plugin": "^1.1.1",
     "url-loader": "^0.5.8",
     "vue-jest": "^1.0.2",
-    "vue-loader": "^15.4.1",
-    "vue-style-loader": "^3.0.1",
+    "vue-loader": "^13.3.0",
+    "vue-style-loader": "^4.1.2",
     "vue-template-compiler": "^2.5.2",
     "webpack": "^3.6.0",
     "webpack-bundle-analyzer": "^2.9.0",
