--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/main.js",
   "private": true,
   "scripts": {
-    "dev": "webpack-dev-server --mode development --inline --progress --config build/webpack.dev.conf.js",
+    "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
     "start": "npm run dev",
     "unit": "jest --config test/unit/jest.conf.js --coverage",
     "test": "npm run unit",
@@ -19,7 +19,6 @@
     "@fortawesome/vue-fontawesome": "0.1.2",
     "vue": "^2.5.17",
     "vue-cli": "2.9.6",
-    "vue-loader": "15.4.2",
     "vue-router": "3.0.1",
     "vuex": "3.0.1"
   },
@@ -39,14 +38,14 @@
     "babel-preset-stage-2": "^6.24.1",
     "chalk": "^2.4.1",
     "copy-webpack-plugin": "^4.5.4",
-    "css-loader": "^1.0.1",
+    "css-loader": "^0.28.0",
     "eslint": "^5.8.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-friendly-formatter": "^4.0.1",
     "eslint-import-resolver-webpack": "^0.10.1",
     "eslint-loader": "^2.1.1",
     "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-vue": "^4.7.1",
+    "eslint-plugin-vue": "^4.0.0",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^2.0.0",
     "friendly-errors-webpack-plugin": "^1.7.0",
@@ -55,27 +54,27 @@
     "jest-serializer-vue": "^2.0.2",
     "node-notifier": "^5.3.0",
     "node-sass": "^4.9.4",
-    "optimize-css-assets-webpack-plugin": "^5.0.1",
+    "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^3.0.0",
     "portfinder": "^1.0.19",
     "postcss-import": "^12.0.1",
     "postcss-loader": "^3.0.0",
     "postcss-url": "^8.0.0",
-    "rimraf": "^2.6.2",
+    "rimraf": "^2.6.0",
     "sass-loader": "^7.1.0",
     "semver": "^5.6.0",
     "shelljs": "^0.8.2",
-    "uglifyjs-webpack-plugin": "^2.0.1",
+    "uglifyjs-webpack-plugin": "^1.1.1",
     "url-loader": "^1.1.2",
     "vue-jest": "^3.0.0",
     "vue-loader": "^15.4.2",
     "vue-style-loader": "^4.1.2",
     "vue-template-compiler": "^2.5.17",
-    "webpack": "^4.23.1",
-    "webpack-bundle-analyzer": "^3.0.3",
+    "webpack": "^3.12.0",
+    "webpack-bundle-analyzer": "^2.9.0",
     "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "^3.1.10",
-    "webpack-merge": "^4.1.4"
+    "webpack-dev-server": "^2.9.1",
+    "webpack-merge": "^4.1.0"
   },
   "engines": {
     "node": ">= 6.0.0",
