--- a/package.json
+++ b/package.json
@@ -1,16 +1,11 @@
 {
-  "name": "cj-haviland-portfolio",
-  "version": "1.0.0",
-  "description": "A portfolio website to show off some of the various development projects I have worked on or created.",
-  "main": "src/main.js",
+  "name": "cj-portfolio-v2.1",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
-    "start": "npm run dev",
-    "unit": "jest --config test/unit/jest.conf.js --coverage",
-    "test": "npm run unit",
-    "lint": "eslint --ext .js,.vue src test/unit",
-    "build": "node build/build.js"
+    "serve": "vue-cli-service serve",
+    "build": "vue-cli-service build",
+    "lint": "vue-cli-service lint"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "1.2.7",
@@ -18,75 +13,19 @@
     "@fortawesome/free-solid-svg-icons": "5.4.2",
     "@fortawesome/vue-fontawesome": "0.1.2",
     "vue": "^2.5.17",
-    "vue-cli": "2.9.6",
-    "vue-router": "3.0.1",
-    "vuex": "3.0.1"
+    "vue-router": "^3.0.1",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
-    "autoprefixer": "^9.3.1",
-    "babel-core": "^6.26.3",
+    "@vue/cli-plugin-babel": "^3.1.1",
+    "@vue/cli-plugin-eslint": "^3.1.5",
+    "@vue/cli-service": "^3.1.4",
+    "@vue/eslint-config-airbnb": "^4.0.0",
     "babel-eslint": "^10.0.1",
-    "babel-helper-vue-jsx-merge-props": "^2.0.3",
-    "babel-jest": "^23.6.0",
-    "babel-loader": "^7.1.5",
-    "babel-plugin-dynamic-import-node": "^2.2.0",
-    "babel-plugin-syntax-jsx": "^6.18.0",
-    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-plugin-transform-vue-jsx": "^3.7.0",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-stage-2": "^6.24.1",
-    "chalk": "^2.4.1",
-    "copy-webpack-plugin": "^4.5.4",
-    "css-loader": "^0.28.0",
     "eslint": "^5.8.0",
-    "eslint-config-airbnb-base": "^13.1.0",
-    "eslint-friendly-formatter": "^4.0.1",
-    "eslint-import-resolver-webpack": "^0.10.1",
-    "eslint-loader": "^2.1.1",
-    "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-vue": "^4.0.0",
-    "extract-text-webpack-plugin": "^3.0.2",
-    "file-loader": "^2.0.0",
-    "friendly-errors-webpack-plugin": "^1.7.0",
-    "html-webpack-plugin": "^3.2.0",
-    "jest": "^23.6.0",
-    "jest-serializer-vue": "^2.0.2",
-    "node-notifier": "^5.3.0",
-    "node-sass": "^4.9.4",
-    "optimize-css-assets-webpack-plugin": "^3.2.0",
-    "ora": "^3.0.0",
-    "portfinder": "^1.0.19",
-    "postcss-import": "^12.0.1",
-    "postcss-loader": "^3.0.0",
-    "postcss-url": "^8.0.0",
-    "rimraf": "^2.6.0",
-    "sass-loader": "^7.1.0",
-    "semver": "^5.6.0",
-    "shelljs": "^0.8.2",
-    "uglifyjs-webpack-plugin": "^1.1.1",
-    "url-loader": "^1.1.2",
-    "vue-jest": "^3.0.0",
-    "vue-loader": "^15.4.2",
-    "vue-style-loader": "^4.1.2",
-    "vue-template-compiler": "^2.5.17",
-    "webpack": "^3.12.0",
-    "webpack-bundle-analyzer": "^2.9.0",
-    "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "^2.9.1",
-    "webpack-merge": "^4.1.0"
-  },
-  "engines": {
-    "node": ">= 6.0.0",
-    "npm": ">= 3.0.0"
-  },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not ie <= 8"
-  ],
-  "keywords": [
-    "portfolio",
-    "vue"
-  ]
+    "eslint-plugin-vue": "^5.0.0-0",
+    "node-sass": "^4.9.0",
+    "sass-loader": "^7.0.1",
+    "vue-template-compiler": "^2.5.17"
+  }
 }
